Tornando listagem de recipes publica
